--- a/blog/src/index.css
+++ b/blog/src/index.css
@@ -1,27 +1,43 @@
-/* Reset some default styles */
-body,
+/* Text Styles */
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
+
+/* Colors */
+:root {
+    --primary-blue: #3498db;
+    --secondary-blue: #2980b9;
+    --text-color: #333;
+    --background-color: #f0f0f0;
+}
+
+/* Fonts */
+:root {
+    --font-family-primary: "Lato", sans-serif;
+    --font-family-secondary: "Montserrat", sans-serif;
+}
+
+/* Text Sizes */
+:root {
+    --font-size-large: 2em;
+    --font-size-medium: 1.5em;
+    --font-size-normal: 1.2em;
+    --font-size-small: 1em;
+    --font-size-tiny: 0.8em;
+}
+
+body {
+    font-family: var(--font-family-primary);
+    font-size: var(--font-size-normal);
+    line-height: 1.5;
+}
+
 h1,
 h2,
 h3,
-p,
-ul,
-li {
-    margin: 0;
-    padding: 0;
+h4,
+h5,
+h6 {
+    font-family: var(--font-family-secondary);
 }
 
-body {
-    font-family: sans-serif;
-}
-
-/* Optionally set a background color or other global styles */
-body {
-    background-color: #f0f0f0;
-}
-
-/* Reset list styles */
-ul {
-    list-style: none;
-}
-
-/* Optionally add more global styles as needed */
+/* Your existing styles go here */
